vitrail-pg-macros/tests/ui/fail/update_helper_unknown_where_field.stderr
error: unknown field `unknown` in update helper `where` for model `user`
  --> tests/ui/fail/update_helper_unknown_where_field.rs:3:1
   |
 3 | / schema! {
 4 | |     name update_helper_schema
 5 | |
 6 | |     model user {
...  |
20 | | }
   | |_^
...
23 |       let _ = update! {
   |  _____________-
24 | |         crate::update_helper_schema,
25 | |         post {
26 | |             data: {
...  |
37 | |     };
   | |_____- in this macro invocation
   |
   = note: this error originates in the macro `__vitrail_update_where_field_filter_update_helper_schema_user` which comes from the expansion of the macro `update` (in Nightly builds, run with -Z macro-backtrace for more info)
